--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <div>
         <h1>Profile</h1>
-        <h2>some text in other language</h2>
+        <h2>Your details please</h2>
         <hr />
         <div class="container1">
           <form action="personal-details">
