--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
         <hr />
         <div class="container1">
           <form action="personal-details">
-            <label for="title">Title</label>
-            <input type="text" placeholder="Dr hc" />
-            <br />
-            <label for="fname">FirstName</label>
-            <input type="text" placeholder="peter" />
-            <br />
-            <label for="lname">LastName</label>
-            <input type="text" placeholder="Muster" />
-            <br />
+               <p>
+                  <label for="title">Title:</label>
+                 <input type="text" placeholder="Dr hc" />
+                </p>
+                <p>
+                    <label for="fname">FirstName:</label>
+                    <input type="text" placeholder="peter" />
+                </p>
+                <p>
+                  <label for="lname">LastName:</label>
+                  <input type="text" placeholder="Muster" />
+                </p> 
 
-            <div>
-              <label for="g-dr">Gender</label>
-              <input type="button" placeholder="M" />
-              <input type="button" placeholder="F" />
+                <div>
+                  <label for="g-dr">Gender:</label>
+                  <input type="button"  />
+                  <input type="button"  />
               
             </div>
 
@@ -40,46 +43,59 @@
           <hr>
           <h2>Contact</h2>
           <form action="contact">
-          <div class="container2">
-            <label for="telphone">Telphone</label>
-            <input type="telephone" placeholder="" />
-            <br>
-            <label for="mobile">Mobile</label>
-            <input type="mobile" placeholder="optional" />
-            <br>
-            <label for="mail">Mail1</label>
-            <input type="mail" placeholder="your mail please">
-            <br>
-            <label for="mail">Mail2</label>
-            <input type="email" placeholder="optional">
-            <hr>
-          </div>
-            <h2>Address</h2>
-          <div class="adr-ss">
-            <form action="add">
-              <label for="telphone">Firma</label>
-              <input type="telephone" placeholder="" />
-              <br>
-              <label for="mobile">Secondfirma</label>
-              <input type="mobile" placeholder="optional" />
-              <br>
-              <label for="mail">Homepage</label>
-              <input type="mail" placeholder="">
-              <br>
-              <label for="address">Address/no</label>
-              <input type="address" placeholder="via valloti 3">
-              <br>  
-
-              <label for="telphone">Cap</label>
-              <input type="telephone" placeholder="23145" />
-              <br>
-              <label for="mobile">provincia</label>
-              <input type="mobile" placeholder="Brescia" />
-                <br>
-                <div>
-                  <label for="submit">Submit</label>
-                  <input type="submit" placeholder="">
+                <div class="container2">
+                  <p>
+                    <label for="telphone">Telphone:</label>
+                    <input type="tel" placeholder="+39.." />
+                  </p>
+                  <p>
+                    <label for="mobile">Mobile:</label>
+                    <input type="tel" placeholder="optional" />
+                  </p>
+                  <p>
+                    <label for="mail">Mail1</label>
+                   <input type="email"  placeholder="example@something.com">
+                  </p>
+                  <p>
+                      <label for="mail">Mail2</label>
+                      <input type="email" placeholder="optional">
+                  </p>
+                  <hr>
                 </div>
+          </form>
+            <h2>Address</h2>
+            <form action="add-1">
+                  <div class="adr-ss">
+                      <p>
+                          <label for="telphone">Firma:</label>
+                          <input type="telephone" placeholder="" />
+                      </p>
+                      <p>
+                          <label for="mobile">Secondfirma:</label>
+                          <input type="mobile" placeholder="optional" />
+                       </p>
+                       <p>
+                          <label for="mail">Homepage:</label>
+                          <input type="mail" placeholder="">
+                       </p>
+                      <p>
+                          <label for="address">Address/no:</label>
+                          <input type="address" placeholder="via valloti 3">
+                      </p> 
+                      <p>
+                          <label for="telphone">Cap:</label>
+                          <input type="telephone" placeholder="23145" />
+                      </p>
+                      <p>
+                          <label for="mobile">provincia:</label>
+                          <input type="mobile" placeholder="Brescia" />
+                      </p>
+                      <p>
+                          <label for="submit">Submit:</label>
+                          <input type="submit" placeholder="">
+                      </p>    
+                    </div>
+                  
             </form>
 
           </div>
